# alesc-poc

./: .gitignore  README.md  pyproject.toml
.claude/hooks/: post-notebook-check.js  post-pipeline-validate.js  pre-commit-paths-check.js
.claude/rules/: data-science.md  notebook.md
app/api/: main.py
app/dashboard/: app.py
conf/base/: catalog.yaml  logging.yml  parameters.yaml
data/01_raw/: ipca_series.csv
data/02_intermediate/: expenses.parquet
example/: pipe-pycaret.ipynb  pipe-pycaret.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
outputs/results/: ALMOXARIFADO_anomalies.csv  ALMOXARIFADO_metrics.json  ALUGUEL_anomalies.csv  ALUGUEL_metrics.json  ASSINATURA_DE_TV_A_CABO_anomalies.csv  ASSINATURA_DE_TV_A_CABO_metrics.json  COMBUSTIVEIS_metrics.json  CORRESPONDENCIA___TELEGRAMA_anomalies.csv  CORRESPONDENCIA___TELEGRAMA_metrics.json  DIARIAS_anomalies.csv  DIARIAS_metrics.json  GRAFICA_anomalies.csv  GRAFICA_metrics.json  PASSAGENS_anomalies.csv  PASSAGENS_metrics.json  REEMBOLSOS_anomalies.csv  REEMBOLSOS_metrics.json  TELEFONE_anomalies.csv  TELEFONE_metrics.json  VEICULOS_anomalies.csv  VEICULOS_metrics.json  all_metrics.json  eda_ALMOXARIFADO_summary.json  eda_ALUGUEL_summary.json  eda_ASSINATURA_DE_TV_A_CABO_summary.json  eda_COMBUSTIVEIS_summary.json  eda_CORRESPONDENCIA___TELEGRAMA_summary.json  eda_DIARIAS_summary.json  eda_GRAFICA_summary.json  eda_INSCRICAO_summary.json  eda_PASSAGENS_summary.json  eda_REEMBOLSOS_summary.json  (+6 more)
scripts/: generate_explanations.py  generate_rankings.py  run_eda_all.py
(+17 files in other folders)
