[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alesc-poc"
version = "0.1.0"
description = "Ensemble anomaly detection on ALESC parliamentary expenses"
requires-python = ">=3.11"
dependencies = [
    # Kedro
    "kedro>=0.19",
    "kedro-datasets[pandas.ParquetDataset,pandas.CSVDataset,json.JSONDataset]>=3.0",
    # ML
    "pyod>=2.0",
    "scikit-learn>=1.4",
    "shap>=0.46",
    # Data
    "pandas>=2.0",
    "numpy>=1.26",
    "pyarrow>=15.0",
    # Feature engineering
    "category-encoders>=2.6",
    # Visualization
    "matplotlib>=3.8",
    "plotly>=5.20",
    "seaborn>=0.13",
    # Profiling
    "ydata-profiling>=4.6",
    # Serving
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "streamlit>=1.33",
    # Utils
    "unidecode>=1.3",
    "tqdm>=4.66",
    "joblib>=1.3",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "ipykernel>=6.29",
    "notebook>=7.1",
]

[project.scripts]
alesc = "alesc_poc.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
